<resources>
    <string name="app_name">SuperSchedule</string>
    <!-- Auth UI - Signed in -->
    <string name="signed_in_header">You are signed in!</string>
    <string name="sign_out">Sign out</string>
    <string name="delete_account_label">Delete account</string>

    <string name="sign_in_failed">Sign in failed</string>
    <string name="sign_in_success">Sign in success</string>
    <string name="sign_out_failed">Sign out failed</string>
    <string name="sign_out_success">Sign out success</string>
    <string name="delete_account_failed">Delete account failed</string>
    <string name="delete_account_success">Delete account success</string>

    <string name="user_profile_header">User profile:</string>
    <string name="profile_picture_content_desc">Profile picture</string>
    <string name="used_providers">Providers used: %s</string>
    <string name="idp_token">IDP Token</string>
    <string name="idp_secret">IDP Secret</string>

    <string name="sign_in_cancelled">Sign in cancelled</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="account_disabled">Account is disabled by the administrator</string>
    <string name="unknown_error">An unknown error occurred</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_map">Map</string>
    <string name="menu_report">Report</string>
    <string name="menu_calendar">Calendar</string>
    <string name="menu_signup">Sign Up</string>
    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_login">Login</string>
    <string name="menu_group">Group Screen</string>

    <string name="Choose_schedule">Choose a schedule</string>
    <string-array name="spinner1">
        <item>Schedule 1</item>
        <item>Schedule 2</item>
    </string-array>

    <string name="signup_wrongpassword">Incorrect format</string>
</resources>