<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@android:drawable/ic_dialog_dialer"
            android:title="@string/menu_calendar" />
        <item
            android:id="@+id/nav_report"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_report" />
        <item
            android:id="@+id/nav_home"
            android:icon="@android:drawable/ic_dialog_map"
            android:title="@string/menu_map" />
        <item
            android:id="@+id/dashboardActivity"
            android:icon="@android:drawable/ic_menu_today"
            android:title="@string/menu_dashboard" />
        <item
            android:id="@+id/groupScreen"
            android:icon="@android:drawable/ic_menu_my_calendar"
            android:title="@string/menu_group" />

        <item
            android:id="@+id/loginActivity"
            android:icon="@android:drawable/ic_menu_send"
            android:title="@string/menu_login" />
    </group>
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/subtitle"
            android:title="Weather">
            <menu>
                <item
                    android:id="@+id/test"
                    android:icon="@android:drawable/ic_menu_compass"
                    android:title="Suzhou"/>
                <item
                    android:id="@+id/test2"
                    android:title="Wendy   23℃"/>
            </menu>
        </item>
    </group>
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/subtitle2"
            android:title="Schedule">
            <menu>
                <item
                    android:id="@+id/test3"
                    android:icon="@android:drawable/ic_lock_idle_alarm"
                    android:title="Lunch"/>
            </menu>
        </item>
    </group>
</menu>