<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_slideshow">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.SuperSchedule.ui.home.HomeFragment"
        android:label="@string/menu_map"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_report"
        android:name="com.example.SuperSchedule.ui.gallery.GalleryFragment"
        android:label="@string/menu_report"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.SuperSchedule.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_calendar"
        tools:layout="@layout/fragment_slideshow" />
    <activity
        android:id="@+id/calenderActivity"
        android:name="com.example.SuperSchedule.CalenderActivity"
        android:label="CalenderActivity" />
    <activity
        android:id="@+id/groupScreen"
        android:name="com.example.SuperSchedule.GroupScreen"
        android:label="GroupScreen" />
    <activity
        android:id="@+id/dashboardActivity"
        android:name="com.example.SuperSchedule.DashboardActivity"
        android:label="DashboardActivity" />
    <activity
        android:id="@+id/loginActivity"
        android:name="com.example.SuperSchedule.LoginActivity"
        android:label="activity_login"
        tools:layout="@layout/activity_login" />
    <activity
        android:id="@+id/signUpActivity"
        android:name="com.example.SuperSchedule.SignUpActivity"
        android:label="SignUpActivity" />
</navigation>